sonar-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
spec:
  type: ClusterIP
  selector:
    app: sonarqube
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9000
